--- a/sdk/ts/package.json
+++ b/sdk/ts/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "tsc": "tsc",
     "preview": "vite preview",
     "test": "vitest"
   },
@@ -21,12 +22,14 @@
   "homepage": "https://github.com/starfederation/datastar#readme",
   "dependencies": {
     "@cowwoc/requirements": "4.0.8",
-    "@starfederation/datastar": "workspace:../library"
+    "@starfederation/datastar": "workspace:../library",
+    "@types/node": "^22.10.2"
   },
   "devDependencies": {
     "fast-check": "^3.23.1",
     "typescript": "~5.6.2",
     "vite": "^5.4.10",
+    "vite-node": "^2.1.8",
     "vitest": "^2.1.4"
   }
 }
