--- a/.github/workflows/deploy-site.yml
+++ b/.github/workflows/deploy-site.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   deploy:
     name: Deploy app
-    if: contains(github.event.head_commit.message, '[deploy-site]')
+    if: github.event_name == 'workflow_dispatch' || contains(github.event.head_commit.message, '[deploy-site]')
     runs-on: ubuntu-latest
     concurrency: deploy-group
     steps:
