--- a/sdk/ts/package.json
+++ b/sdk/ts/package.json
@@ -2,13 +2,8 @@
   "name": "@starfederation/datastar-sdk",
   "version": "0.0.1",
   "description": "Typescript SDK for Datastar",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "tsc": "tsc",
-    "preview": "vite preview",
-    "test": "vitest"
+    "tsc": "tsc"
   },
   "repository": {
     "type": "git",
@@ -26,10 +21,6 @@
     "@types/node": "^22.10.2"
   },
   "devDependencies": {
-    "fast-check": "^3.23.1",
-    "typescript": "~5.6.2",
-    "vite": "^5.4.10",
-    "vite-node": "^2.1.8",
-    "vitest": "^2.1.4"
+    "typescript": "~5.6.2"
   }
 }
