--- a/sdk/typescript/package.json
+++ b/sdk/typescript/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "tsc": "tsc"
   },
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/starfederation/datastar.git"
