fix requesting sw.js instead of sw.min.js

--- a/sdk/typescript/examples/isomorphic-service-worker/deno.json
+++ b/sdk/typescript/examples/isomorphic-service-worker/deno.json
@@ -11,8 +11,8 @@
     "serve": "deno run -A --unstable-sloppy-imports deno.ts",
     "serve:dev": "deno run -A --unstable-sloppy-imports --watch deno.ts",
     "dev": "deno task watch:sw & deno task serve:dev",
-    "dev:min": "deno task watch:sw:min & deno task serve:dev",
+    "dev:min": "MINIFY=true deno task watch:sw:min & MINIFY=true deno task serve:dev",
     "start": "deno task build:sw && deno task serve",
-    "start:min": "deno task build:sw:min && deno task serve"
+    "start:min": "MINIFY=true deno task build:sw:min && MINIFY=true deno task serve"
   }
 }
