--- a/sdk/typescript/examples/isomorphic-service-worker/deno.json
+++ b/sdk/typescript/examples/isomorphic-service-worker/deno.json
@@ -4,15 +4,15 @@
     "@luca/esbuild-deno-loader": "jsr:@luca/esbuild-deno-loader@^0.9.0"
   },
   "tasks": {
-    "build:sw": "deno run -A --unstable-sloppy-imports build.js",
-    "build:sw:min": "MINIFY=true deno run -A --unstable-sloppy-imports build.js",
-    "watch:sw": "deno run -A --unstable-sloppy-imports build.js --watch",
-    "watch:sw:min": "MINIFY=true deno run -A --unstable-sloppy-imports build.js --watch",
+    "build:sw": "deno run -A --unstable-sloppy-imports build.ts",
+    "build:sw:min": "MINIFY=true deno run -A --unstable-sloppy-imports build.ts",
+    "watch:sw": "deno run -A --unstable-sloppy-imports build.ts --watch",
+    "watch:sw:min": "MINIFY=true deno run -A --unstable-sloppy-imports build.ts --watch",
     "serve": "deno run -A --unstable-sloppy-imports deno.ts",
     "serve:dev": "deno run -A --unstable-sloppy-imports --watch deno.ts",
     "dev": "deno task watch:sw & deno task serve:dev",
-    "dev:min": "MINIFY=true deno task watch:sw:min & MINIFY=true deno task serve:dev",
-    "start": "deno task build:sw && deno task serve",
-    "start:min": "MINIFY=true deno task build:sw:min && MINIFY=true deno task serve"
+    "dev:min": "deno task watch:sw:min & MINIFY=true deno task serve:dev",
+    "start": "deno task build:sw & deno task serve",
+    "start:min": "MINIFY=true deno task build:sw:min & MINIFY=true deno task serve"
   }
 }
