--- a/examples/rust/infinite_scroll/Cargo.toml
+++ b/examples/rust/infinite_scroll/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.1.0"
 
 [dependencies]
 axum = "0.8.1"
-datastar = { path = "../../sdk/rust", features = ["axum"] }
+datastar = { path = "../../../sdk/rust", features = ["axum"] }
 rinja = { version = "0.3.5", features = ["serde_json"] }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.137"
