--- a/sdk/rust/Cargo.toml
+++ b/sdk/rust/Cargo.toml
@@ -11,12 +11,22 @@ readme = "README.md"
 repository = "https://github.com/jmstevers/datastar-rust-sdk"
 version = "0.1.0"
 
+[dev-dependencies]
+axum = { version = "0.8.1" }
+tokio = { version = "1.43.0", features = ["full"] }
+
 [dependencies]
-axum = { version = "0.8.1", default-features = false, optional = true }
+axum = { version = "0.8.1", default-features = false, optional = true, features = [
+    "query",
+] }
 mime = { version = "0.3.17", default-features = false, optional = true }
-serde = { version = "1.0.217", optional = true }
-serde_json = { version = "1.0.137", optional = true }
-typle = "0.10.6"
+serde = { version = "1.0.217", default-features = false, optional = true, features = [
+    "derive",
+] }
+serde_json = { version = "1.0.137", default-features = false, optional = true, features = [
+    "std",
+] }
+typle = { version = "0.10.6", default-features = false }
 
 [features]
 axum = ["dep:axum", "dep:mime", "dep:serde", "dep:serde_json"]
