--- a/sdk/typescript/examples/isomorphic-service-worker/deno.json
+++ b/sdk/typescript/examples/isomorphic-service-worker/deno.json
@@ -1,19 +1,14 @@
 {
   "imports": {
-    "@hono/hono": "jsr:@hono/hono@^4.6.16",
+    "@hono/hono": "jsr:@hono/hono@^4.6.19",
     "@luca/esbuild-deno-loader": "jsr:@luca/esbuild-deno-loader@^0.9.0"
   },
   "tasks": {
     "build:sw": "deno run -A --unstable-sloppy-imports build.ts",
     "build:sw:min": "MINIFY=true deno run -A --unstable-sloppy-imports build.ts",
-    "watch:sw": "deno run -A --unstable-sloppy-imports build.ts --watch",
-    "watch:sw:min": "MINIFY=true deno run -A --unstable-sloppy-imports build.ts --watch",
     "serve": "deno run -A --unstable-sloppy-imports deno.ts",
-    "serve:dev": "deno run -A --unstable-sloppy-imports --watch deno.ts",
-    "dev": "deno task watch:sw & deno task serve:dev",
-    "dev:min": "deno task watch:sw:min & MINIFY=true deno task serve:dev",
     "start": "deno task build:sw & deno task serve",
-    "start:min": "MINIFY=true deno task build:sw:min & MINIFY=true deno task serve"
+    "start:min": "deno task build:sw:min & MINIFY=true deno task serve"
   },
   "nodeModulesDir": "auto"
 }
