remove mime dependency

--- a/sdk/rust/Cargo.toml
+++ b/sdk/rust/Cargo.toml
@@ -23,7 +23,6 @@ axum = { version = "0.8.1", default-features = false, optional = true, features 
 bevy_utils = { version = "0.15.1", default-features = false, optional = true, features = [
     "std",
 ] }
-mime = { version = "0.3.17", default-features = false, optional = true }
 rocket = { version = "0.5.1", default-features = false, optional = true, features = [
 ] }
 serde = { version = "1.0.217", default-features = false, optional = true, features = [
@@ -34,7 +33,7 @@ serde_json = { version = "1.0.138", default-features = false, optional = true, f
 ] }
 
 [features]
-axum = ["dep:axum", "dep:mime", "dep:serde", "dep:serde_json", "dep:bevy_utils"]
+axum = ["dep:axum", "dep:serde", "dep:serde_json", "dep:bevy_utils"]
 default = ["axum", "rocket"]
 rocket = ["dep:rocket"]
 
