--- a/sdk/rust/Cargo.toml
+++ b/sdk/rust/Cargo.toml
@@ -1,14 +1,13 @@
 [package]
 authors = ["Johnathan Stevers <jmstevers@gmail.com>"]
 categories = ["web-programming"]
-description = "Datastar is a Rust implementation of the [Datastar](https://data-star.dev) SDK specification."
-documentation = "..."
+description = "Datastar is the Rust implementation of the [Datastar](https://data-star.dev) SDK."
 edition = "2021"
 keywords = ["datastar", "web", "backend"]
 license = "MIT OR Apache-2.0"
 name = "datastar"
 readme = "README.md"
-repository = "https://github.com/jmstevers/datastar-rust-sdk"
+# repository = "https://github.com/starfederation/datastar-rs"
 version = "0.1.0"
 
 [dev-dependencies]
