--- a/sdk/rust/Cargo.toml
+++ b/sdk/rust/Cargo.toml
@@ -19,9 +19,6 @@ axum = { version = "0.8.1", default-features = false, optional = true, features 
     "query",
     "tokio",
 ] }
-bevy_utils = { version = "0.15.1", default-features = false, optional = true, features = [
-    "std",
-] }
 rocket = { version = "0.5.1", default-features = false, optional = true, features = [
 ] }
 serde = { version = "1.0.217", default-features = false, optional = true, features = [
@@ -32,7 +29,7 @@ serde_json = { version = "1.0.138", default-features = false, optional = true, f
 ] }
 
 [features]
-axum = ["dep:axum", "dep:serde", "dep:serde_json", "dep:bevy_utils"]
+axum = ["dep:axum", "dep:serde", "dep:serde_json"]
 default = ["axum", "rocket"]
 rocket = ["dep:rocket"]
 
