--- a/examples/rust/rocket/hello-world/Cargo.toml
+++ b/examples/rust/rocket/hello-world/Cargo.toml
@@ -5,4 +5,4 @@ version = "0.1.0"
 
 [dependencies]
 datastar = { path = "../../../../sdk/rust", features = ["rocket"] }
-rocket = { version = "0.5.1", features = ["json"] }
+rocket = { version = "0.5.1", default-features = false, features = ["json"] }
