--- a/examples/typescript/deno-sw/deno.json
+++ b/examples/typescript/deno-sw/deno.json
@@ -4,9 +4,9 @@
     "@luca/esbuild-deno-loader": "jsr:@luca/esbuild-deno-loader@^0.9.0"
   },
   "tasks": {
-    "start": "deno run -A deno.ts",
+    "start": "deno run -A ./src/deno.ts",
     "build": "deno run -A build.ts",
-    "dev": "deno task build && deno run -A --watch deno.ts"
+    "dev": "deno task build && deno run start"
   },
   "nodeModulesDir": "auto"
 }
