update to smoketests, reducing failure rates

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -166,11 +166,10 @@ tasks:
       - fly deploy --local-only
 
   test:
-    dir: site/smoketests
     deps:
       - support
     cmds:
-      - go test -v
+      - go test -v github.com/starfederation/datastar/site/smoketests -count=1 -timeout=1m
 
   default:
     cmds:
