Minor fixes for the Rust SDK (#632)
* Add necessary dev-dependencies for testing

* Update some crate metadata

* Replace all implementations of `Into` with `From`

* Replace `write!` with `writeln!` when applicable

* Replace `futures` crate with slightly more minimal `futures_util` crate

* Clarify uses of `Default::default()`

--- a/sdk/rust/Cargo.toml
+++ b/sdk/rust/Cargo.toml
@@ -3,11 +3,12 @@ authors = ["Johnathan Stevers <jmstevers@gmail.com>"]
 categories = ["web-programming"]
 description = "Datastar is the Rust implementation of the [Datastar](https://data-star.dev) SDK."
 edition = "2021"
+homepage = "https://data-star.dev"
 keywords = ["datastar", "web", "backend"]
 license = "MIT OR Apache-2.0"
 name = "datastar"
 readme = "README.md"
-# repository = "https://github.com/starfederation/datastar-rs"
+repository = "https://github.com/starfederation/datastar-rs"
 version = "0.1.0"
 
 [dev-dependencies]
@@ -16,6 +17,9 @@ serde = { version = "1.0.217", default-features = false, features = ["derive"] }
 serde_json = { version = "1.0.138", default-features = false, features = [
     "std",
 ] }
+tokio = { version = "1.43.0", features = ["full"] }
+axum = { version = "0.8.1" }
+rocket = { version = "0.5.1", features = ["json"] }
 
 
 [dependencies]
@@ -23,7 +27,7 @@ axum = { version = "0.8.1", default-features = false, optional = true, features 
     "query",
     "tokio",
 ] }
-futures = { version = "0.3.31", default-features = false }
+futures-util = { version = "0.3.31", default-features = false }
 http-body = { version = "1.0.1", default-features = false, optional = true }
 pin-project-lite = { version = "0.2.16", default-features = false, optional = true }
 rocket = { version = "0.5.1", default-features = false, optional = true }
