--- a/site/webcomponents/package.json
+++ b/site/webcomponents/package.json
@@ -12,6 +12,7 @@
     "lit": "^3.2.1"
   },
   "devDependencies": {
+    "@types/node": "^22.13.1",
     "typescript": "~5.7.2",
     "vite": "^6.1.0"
   }
