--- a/sdk/dotnet/src/Datastar.fsproj
+++ b/sdk/dotnet/src/Datastar.fsproj
@@ -11,7 +11,6 @@
         <NeutralLanguage>en-CA</NeutralLanguage>
 
         <!-- Build config -->
-        <TargetFrameworks>net6.0;net7.0;net8.0;net9.0</TargetFrameworks>
         <DebugType>embedded</DebugType>
         <OutputType>Library</OutputType>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
@@ -34,6 +33,7 @@
         <EmbedUntrackedSources>true</EmbedUntrackedSources>
         <IncludeSymbols>true</IncludeSymbols>
         <Title>StarFederation.Datastar</Title>
+        <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
