--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,16 +5,26 @@ on:
     branches:
       - develop
     paths:
-      - "**/*.templ"
-      - "**/*.md"
-      - "**/*.go"
-      - "**/*.qtpl"
-      - "**/package.json"
-      - "**/*.ts"
+      - 'bundles/*.js'
+      - 'library/src/**/*.ts'
+      - 'site/smoketests/*.go'
+      - 'site/static/md/tests/*.md'
       - '.github/workflows/tests.yml'
   pull_request:
   workflow_dispatch:
 jobs:
+  enforce-branch-policy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check target branch
+        if: github.event.pull_request.base.ref == 'main'
+        run: |
+          echo "Pull requests to the main branch are not allowed."
+          exit 1
+      - name: Check passed
+        if: github.event.pull_request.base.ref == 'develop'
+        run: echo "Pull request target branch is allowed."
+
   tests:
     runs-on: ubuntu-latest
     steps:
