--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -70,18 +70,31 @@ tasks:
       - rm -rf site/static/librarySource/*
       - cp -r library/src/* site/static/librarySource/
 
+  library:
+    dir: library
+    requires:
+      vars: [VERSION]
+    sources:
+      - "**/*.ts"
+      - "**/*.js"
+      - "**/*.json"
+    generates:
+      - "dist/**/*"
+    cmds:
+      - pnpm i
+      - pnpm build
+
   libpub:
     dir: library
     requires:
       vars: [VERSION]
     deps:
       - build
+      - library
     cmds:
       - git push origin
       - git tag v{{.VERSION}}
       - git push origin --tags
-      - pnpm i
-      - pnpm build
       - npm publish --access public
       - curl https://purge.jsdelivr.net/gh/starfederation/datastar/bundles/datastar.js
       - git push origin --tags
@@ -123,6 +136,8 @@ tasks:
   templ:
     env:
       TEMPL_EXPERIMENT: rawgo
+    deps:
+      - library
     generates:
       - "**/*_templ.go"
     sources:
