--- a/sdk/java/datastar-java-sdk-jaxrs/pom.xml
+++ b/sdk/java/datastar-java-sdk-jaxrs/pom.xml
@@ -22,7 +22,7 @@
     <distributionManagement>
         <repository>
             <id>github</id>
-            <url>https://github.com/starfederation/datastar</url>
+            <url>https://maven.pkg.github.com/rphumulock/datastar</url>
         </repository>
     </distributionManagement>
 
