--- a/sdk/python/pyproject.toml
+++ b/sdk/python/pyproject.toml
@@ -37,10 +37,11 @@ build-backend = "hatchling.build"
 dev = [
     "django>=4.2.17",
     "fastapi[standard]>=0.115.4",
-    "fasthtml>=0.12.0",
+    #    "fasthtml>=0.12.0",
     "flask[async]>=3.0.3",
     "quart>=0.19.9",
     "sanic>=24.6.0",
+    "starlette>=0.46.1",
     "uvicorn>=0.32.1",
 ]
 
