--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,8 @@
     },
     "[json]": {
         "editor.defaultFormatter": "biomejs.biome"
+    },
+    "[markdown]": {
+        "editor.formatOnSave": false
     }
 }
