Update editor settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,9 @@
     "[json]": {
         "editor.defaultFormatter": "biomejs.biome"
     },
+    "[html]": {
+        "editor.formatOnSave": false
+    },
     "[markdown]": {
         "editor.formatOnSave": false
     }
