Break up `on` plugin (#789)
* Break out plugins

* Rename to `data-signal-change`

* Rename plugins

* Break out `on` plugins

* `data-init` → `data-on-load`

* Fixes and errors

* Fix example

* Fix example

* Fix tests

* Fix tooling

* Add release notes

* Fix docs

* Remove `ctx.signals` docs

* Link text

* Update plugin icons

* Icon

* Update editor settings

* Remove expression context page

* Improve docs

* Tweak wording

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,11 @@
     },
     "[json]": {
         "editor.defaultFormatter": "biomejs.biome"
+    },
+    "[html]": {
+        "editor.formatOnSave": false
+    },
+    "[markdown]": {
+        "editor.formatOnSave": false
     }
 }
